--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 									<h3>Who We Are</h3>
                                     <h1 class="big b">National Excellence Enterprise</h1>
                                     <div class="spacer-single"></div>
-                                    <a href="../quoteme/quote.html" class="btn-custom">Register Now</a>
+                                    <a href="../register/gowns.html" class="btn-custom">Register Now</a>
                                 </div>
 								
 								<div class="col-md-7 col-sm-12">
@@ -155,7 +155,7 @@
                         <!-- feature box begin -->
                         <div class="col-md-4 col-sm-6 feature-box mb40 sq-item wow">
                             <div class="feature-box style-2 left">
-                                <i class="icon-envelope"></i>
+                                <i class="icon-telescope"></i>
                                 <div class="text">
 									<span class="tiny">02</span>
                                     <h3>Vision</h3>
@@ -168,7 +168,7 @@
                         <!-- feature box begin -->
                         <div class="col-md-4 col-sm-6 feature-box mb40 sq-item wow">
                             <div class="feature-box style-2 left">
-                                <i class="icon-camera"></i>
+                                <i class="icon-target"></i>
                                 <div class="text">
 									<span class="tiny">03</span>
                                     <h3>Objectives</h3>
@@ -266,7 +266,7 @@
                                 <div class="pf-click" data-value="project-details-image.html">
                                     <span class="overlay">
 											<span class="title">
-												<span>Single Image</span>
+												<span>Fungisai Zvakavapano being Awarded</span>
                                     </span>
                                     </span>
                                     <img src="images/award-02.png" loading="lazy" class="wow" alt="No Image Found"/>
@@ -281,7 +281,7 @@
                                 <div class="pf-click" data-value="project-details-slider.html">
                                     <span class="overlay">
 											<span class="title">
-												<span>Multi Images Slider</span>
+												<span>Oustanding Females being Awarded</span>
                                     </span>
                                     </span>
                                     <img src="images/award-03.png" class="wow" alt="No Image" />
@@ -296,7 +296,7 @@
                                 <div class="pf-click" data-value="project-details-youtube.html">
                                     <span class="overlay">
 											<span class="title">
-												<span>Youtube Video</span>
+												<span>Excellence in Male Category being Awarded</span>
                                     </span>
                                     </span>
                                     <img src="images/award-05.png" class="wow" alt="No Image" />
@@ -305,13 +305,13 @@
                         </div>
                         <!-- close gallery item -->
 
-                        <!-- gallery item -->
+                        <!-- gallery item
                         <div class="sq-item">
                             <div class="picframe wow">
                                 <div class="pf-click" data-value="project-details-image-big.html">
                                     <span class="overlay">
 											<span class="title">
-												<span>Single Image Big</span>
+												<span>Male artist being Rewarded</span>
                                     </span>
                                     </span>
                                     <img src="images/award-07.png" class="wow" alt="No image" />
@@ -326,7 +326,7 @@
                                 <div class="pf-click" data-value="project-details-slider-big.html">
                                     <span class="overlay">
 											<span class="title">
-												<span>Multi Images Slider Big</span>
+												<span>Excellence in Male Category being Awarded</span>
                                     </span>
                                     </span>
                                     <img src="images/award-04.png" class="wow" alt="No Image" />
@@ -341,7 +341,7 @@
                                 <div class="pf-click" data-value="project-details-youtube-big.html">
                                     <span class="overlay">
 											<span class="title">
-												<span>Youtube Video Big</span>
+												<span>Excellence in Female Category being Awarded</span>
                                     </span>
                                     </span>
                                     <img src="images/award-04.png" class="wow" alt="No Image" />
@@ -375,7 +375,7 @@
                                 <div class="feature-box-style-1">
                                     <div class="inner">
                                         <div class="front">
-                                            <i class="icon-lightbulb id-color"></i>
+                                            <i class="icon-documents id-color"></i>
                                             <h3>Eligibility</h3>
                                             <span>Learn about the eligibility criteria for nominating a healthcare professional</span>
                                         </div>
@@ -392,12 +392,12 @@
                                 <div class="feature-box-style-1">
                                     <div class="inner">
                                         <div class="front">
-                                            <i class="icon-presentation id-color"></i>
+                                            <i class="icon-trophy id-color"></i>
                                             <h3>Judging Criteria</h3>
-                                            <span>Discover how our panel of experts will review nominations.</span>
+                                            <span>Click here to discover how the nominations will be awarded.</span>
                                         </div>
                                         <div class="info">
-                                            <p>Nominations will be evaluated by a panel of esteemed judges who will consider factors such as the nominee's impact on patient care, innovation in medical practice and dedication to their profession.</p>
+                                            <p>Awards will be given based on our research and your biography and we have two categories of awards which are platinum and gold.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -409,12 +409,12 @@
                                 <div class="feature-box-style-1">
                                     <div class="inner">
                                         <div class="front">
-                                            <i class="icon-circle-compass id-color"></i>
-                                            <h3>Agenda</h3>
-                                            <span>Get an overview of the event schedule and networking opportunities</span>
+                                            <i class="icon-envelope id-color"></i>
+                                            <h3>Nomination Process</h3>
+                                            <span>Click here to get an overview of the nomination process</span>
                                         </div>
                                         <div class="info">
-                                            <p>The event will feature a detailed agenda including keynote speeches from industry leaders, award presentations for each category and ample networking opportunities for attendees.</p>
+                                            <p>We have a team of researchers moving around researching and after that they reach out to nominees to send their biography and then we use the biography and research to determine your category.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -426,7 +426,7 @@
                                 <div class="feature-box-style-1">
                                     <div class="inner">
                                         <div class="front">
-                                            <i class="icon-presentation id-color"></i>
+                                            <i class="icon-clipboard id-color"></i>
                                             <h3>Nomination Form</h3>
                                             <span>Learn how to register and submit the form</span>
                                         </div>
@@ -597,6 +597,54 @@
                 </div>
             </section>
             <!-- section close -->
+
+            <!-- Service Start -->
+            <div class="container-xxl py-4 mt-6 mb-6 service-background">
+                <div class="container">
+                    <div class="row g-4">
+                        <div class="text-center">
+                            <h2>Bookings Section</h2>
+                        </div>
+                        <div class="col-lg-3 col-sm-6 wow fadeIn" data-wow-delay="0.1s">
+                            <div class="service-item text-center pt-3">   
+                                <div class="p-4 service-title">
+                                    <h5 class="mb-3">Gowns Booking</h5>
+                                    <p>Make your bookings here</p>
+                                    <button type="button" class="btn custom-btn">Book Now</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-sm-6 wow fadeIn" data-wow-delay="0.3s">
+                            <div class="service-item text-center pt-3">
+                                <div class="p-4 service-title">
+                                    <h5 class="mb-3">Table Booking</h5>
+                                    <p>Secure Your Table Now</p>
+                                    <button type="button" class="btn custom-btn">Read More</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                            <div class="service-item text-center pt-3">
+                                <div class="p-4 service-title">
+                                    <h5 class="mb-3">Booking Information</h5>
+                                    <p>More Info Here</p>
+                                    <button type="button" class="btn custom-btn">Read More</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-sm-6 wow fadeIn" data-wow-delay="0.7s">
+                            <div class="service-item text-center pt-3">
+                                <div class="p-4 service-title">
+                                    <h5 class="mb-3">Contact Us</h5>
+                                    <p>Get in Touch with Us on how to place your booking</p>
+                                    <button type="button" class="btn custom-btn">Read More</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Service End -->
 
             <!-- section service begin -->
             <section id="section-side" class="side-bg no-padding text-light" data-bgcolor="#202020">
