--- a/index.html
+++ b/index.html
@@ -608,24 +608,27 @@
                         <div class="col-lg-3 col-sm-6 wow fadeIn" data-wow-delay="0.1s">
                             <div class="service-item text-center pt-3">   
                                 <div class="p-4 service-title">
+                                    <i class="fa fa-3x fa-graduation-cap custom-icon mb-4"></i>
                                     <h5 class="mb-3">Gowns Booking</h5>
                                     <p>Make your bookings here</p>
-                                    <button type="button" class="btn custom-btn">Book Now</button>
+                                    <button type="button" class="btn custom-btn"><a href="../register/form.html">Book Now</a></button>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-3 col-sm-6 wow fadeIn" data-wow-delay="0.3s">
                             <div class="service-item text-center pt-3">
                                 <div class="p-4 service-title">
+                                    <i class="fa fa-3x fa-table custom-icon mb-4"></i>
                                     <h5 class="mb-3">Table Booking</h5>
                                     <p>Secure Your Table Now</p>
-                                    <button type="button" class="btn custom-btn">Read More</button>
+                                    <button type="button" class="btn custom-btn"><a href="#">Book Now</a></button>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-3 col-sm-6 wow fadeIn" data-wow-delay="0.5s">
                             <div class="service-item text-center pt-3">
                                 <div class="p-4 service-title">
+                                    <i class="fa fa-3x fa-info-circle custom-icon mb-4"></i>
                                     <h5 class="mb-3">Booking Information</h5>
                                     <p>More Info Here</p>
                                     <button type="button" class="btn custom-btn">Read More</button>
@@ -635,9 +638,10 @@
                         <div class="col-lg-3 col-sm-6 wow fadeIn" data-wow-delay="0.7s">
                             <div class="service-item text-center pt-3">
                                 <div class="p-4 service-title">
+                                    <i class="fa fa-3x fa-phone custom-icon mb-4"></i>
                                     <h5 class="mb-3">Contact Us</h5>
-                                    <p>Get in Touch with Us on how to place your booking</p>
-                                    <button type="button" class="btn custom-btn">Read More</button>
+                                    <p>Get in Touch with Us</p>
+                                    <button type="button" class="btn custom-btn">Call Us</button>
                                 </div>
                             </div>
                         </div>
