--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 									<h3>Who We Are</h3>
                                     <h1 class="big b">National Excellence Enterprise</h1>
                                     <div class="spacer-single"></div>
-                                    <a href="../register/gowns.html" class="btn-custom">Register Now</a>
+                                    <a href="#bookings" class="btn-custom">Register Now</a>
                                 </div>
 								
 								<div class="col-md-7 col-sm-12">
@@ -599,7 +599,7 @@
             <!-- section close -->
 
             <!-- Service Start -->
-            <div class="container-xxl py-4 mt-6 mb-6 service-background">
+            <div class="container-xxl py-4 mt-6 mb-6 service-background" id="bookings">
                 <div class="container">
                     <div class="row g-4">
                         <div class="text-center">
@@ -611,7 +611,7 @@
                                     <i class="fa fa-3x fa-graduation-cap custom-icon mb-4"></i>
                                     <h5 class="mb-3">Gowns Booking</h5>
                                     <p>Make your bookings here</p>
-                                    <button type="button" class="btn custom-btn"><a href="../register/form.html">Book Now</a></button>
+                                    <button type="button" class="btn custom-btn"><a href="../register/gowns.html">Book Now</a></button>
                                 </div>
                             </div>
                         </div>
