--- a/register/gowns.html
+++ b/register/gowns.html
@@ -53,7 +53,7 @@
                                 </div>
                               </div>
 
-                              <h4>Select Service:</h4>
+                              <h4>Select A Category:</h4>
                               <div class="form-group validcategory">
                                 <select
                                   class="form-control"
@@ -76,7 +76,7 @@
                                   <option value="Surgery">Surgery</option>
                                 </select>
                                 <div class="input-group-icon">
-                                  <i class="fa-solid fa-gear"></i>
+                                  <i class="fa fa-list-alt"></i>
                                 </div>
                                 <div class="help-block with-errors"></div>
                               </div>
@@ -116,7 +116,7 @@
                                   data-error="Please enter Your Shoulder Width"
                                 />
                                 <div class="input-group-icon">
-                                  <i class="fa-solid fa-user"></i>
+                                  <i class="fa fa-arrows-alt-h"></i>
                                 </div>
                                 <div class="help-block with-errors"></div>
                               </div>
@@ -135,7 +135,7 @@
                                   data-error="Please enter Your Chest Width"
                                 />
                                 <div class="input-group-icon">
-                                  <i class="fa-solid fa-user"></i>
+                                  <i class="fa fa-arrows-alt-h"></i>
                                 </div>
                                 <div class="help-block with-errors"></div>
                               </div>
@@ -154,7 +154,7 @@
                                   data-error="Please enter Your Cuff Measurement"
                                 />
                                 <div class="input-group-icon">
-                                  <i class="fa-solid fa-user"></i>
+                                  <i class="fa fa-ruler"></i>
                                 </div>
                                 <div class="help-block with-errors"></div>
                               </div>
@@ -173,7 +173,7 @@
                                   data-error="Please enter Your Sleeve Length"
                                 />
                                 <div class="input-group-icon">
-                                  <i class="fa-solid fa-user"></i>
+                                  <i class="fa fa-ruler-vertical"></i>
                                 </div>
                                 <div class="help-block with-errors"></div>
                               </div>
@@ -192,7 +192,7 @@
                                   data-error="Please enter Your Body Length"
                                 />
                                 <div class="input-group-icon">
-                                  <i class="fa-solid fa-user"></i>
+                                  <i class="fa fa-tape"></i>
                                 </div>
                                 <div class="help-block with-errors"></div>
                               </div>
@@ -259,7 +259,7 @@
                                   placeholder="Gender"
                                   required
                                 >
-                                  <option value="">--- Select Your Gender* ---</option>
+                                  <option value="">--- *Select Your Gender* ---</option>
                                   <option value="Male">Male</option>
                                   <option value="Femal">Female</option>
                                   <option value="Other">Other</option>
@@ -490,7 +490,7 @@
               <div class="footer-top col-sm-12">
                 <p class="text-center copyright">
                   &copy; <span id="mgsYear"></span>
-                  <a href="#" class="footer-site-link">National Medical Excellence Awards 2024</a>
+                  <a href="../index.html" class="footer-site-link">National Medical Excellence Awards 2024</a>
                   All rights reserved.
                 </p>
               </div>
